Implemented user creation and invitation
